# UFO-Torrent

./: CMakeLists.txt  stop
includes/: decode.h  decode_BACKUP_338.h  ufo_torrent.h
src/: CMakeLists.txt  main.cpp  ncurses_utils.cpp  ufo_torrent.cpp
src/bencode/: decode.cpp  encode.cpp  prettyPrinter.cpp
src/utils/: fileUtils.cpp
tests/: CMakeLists.txt  test.cpp
